[package]
name = "plotters-iced"
version = "0.11.0"
description = "Iced backend for Plotters"
readme = "README.md"
license = "MIT"
edition = "2021"
resolver = "2"
homepage = "https://github.com/Joylei/plotters-iced"
repository = "https://github.com/Joylei/plotters-iced.git"
documentation = "https://docs.rs/crate/plotters-iced/"
keywords = ["plotters", "chart", "plot", "iced", "backend"]
categories = ["visualization"]
authors = ["Joylei <leingliu@gmail.com>"]

[workspace]
members = [".", "examples/split-chart"]

[dependencies]

plotters = { git = "https://github.com/plotters-rs/plotters.git", rev = "0f195ea", default-features = false }
plotters-backend = { git = "https://github.com/plotters-rs/plotters.git", rev = "0f195ea" }
iced_widget = { version = "0.13", features = ["canvas", "image"] }
iced_graphics = "0.13"

dashmap = "6.1.0"

[dev-dependencies]
iced = { version = "0.13", features = ["canvas", "tokio"] }
chrono = { version = "0.4", default-features = false }
rand = "0.8"
tokio = { version = "1", features = ["rt"], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sysinfo = { version = "0.30", default-features = false }
